[package]
name = "my_parser_verbytska"
version = "0.1.0"
edition = "2021"
readme  = "Readme.md"
description = "My parser for Rust Programming Language course project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
