#  Project name: "markdown_parser"
#  Corresponding crate name: "markdown_parser"
#  Simple parser for Markdown language written in Rust as a part of course project at NaUKMA


# Technical overview:
# 1. Takes string in markdown style as an input
# 2. Returns string with HTML tags to represent the result 
[package]
name = "markdown_parser"
version = "0.1.0"
edition = "2021"
readme  = "Readme.md"
description = "My parser for Rust Programming Language course project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clippy = "0.0.302"
fmt = "0.1.0"
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"

[lib]
name = "lib"
path = "./src/lib.rs"
